--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "format:check": "prettier --check .",
     "prepare": "husky",
     "lint": "npx eslint --max-warnings 0 \"./src/**/*.js\" \"./scripts/**/*.js\" \"./tests/**/*.js\" \"./api/**/*.js\" \"./themes/**/*.js\"",
-    "bench": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.bench.config.js"
+    "bench": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.bench.config.js",
+    "dev":"nodemon express.js --mode development"
   },
   "author": "Anurag Hazra",
   "license": "MIT",
@@ -57,8 +58,10 @@
     "js-yaml": "^4.1.0",
     "lint-staged": "^15.5.1",
     "lodash.snakecase": "^4.1.1",
+    "nodemon": "^3.1.10",
     "parse-diff": "^0.11.1",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "express": "^5.1.0"
   },
   "dependencies": {
     "axios": "^1.9.0",
