--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "husky",
     "lint": "npx eslint --max-warnings 0 \"./src/**/*.js\" \"./scripts/**/*.js\" \"./tests/**/*.js\" \"./api/**/*.js\" \"./themes/**/*.js\"",
     "bench": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.bench.config.js",
-    "dev":"nodemon express.js --mode development"
+    "dev": "nodemon express.js --mode development"
   },
   "author": "Anurag Hazra",
   "license": "MIT",
@@ -49,9 +49,9 @@
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsdoc": "^50.7.1",
+    "express": "^5.1.0",
     "globals": "^16.2.0",
     "hjson": "^3.2.2",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-bench": "^29.7.1",
     "jest-environment-jsdom": "^29.7.0",
@@ -60,8 +60,7 @@
     "lodash.snakecase": "^4.1.1",
     "nodemon": "^3.1.10",
     "parse-diff": "^0.11.1",
-    "prettier": "^3.5.3",
-    "express": "^5.1.0"
+    "prettier": "^3.5.3"
   },
   "dependencies": {
     "axios": "^1.9.0",
